tests/fixtures/invalid/str_2_args.py
# str() takes at most 1 argument, got 2
x = str(1, 1)
